# mcp-server-file-search

./: .gitignore  ADVANCED_QUERIES.md  AGENTS.md  Makefile  Package.swift  README.md  SEARCH_SYNTAX.md  everything_search_sample.py  pyproject.toml  test_mcp.sh
.github/workflows/: publish-to-test-pypi.yml  swift.yml
Sources/MCPFileSearch/: FileSearchToolHandler.swift  Logger.swift  MCPFileSearchServer.swift  QueryBuilder.swift  SpotlightQuery.swift  SpotlightSearchActor.swift  Types.swift  main.swift
Tests/: README.md
Tests/MCPFileSearchTests/: ConnectionTests.swift  E2EFileSearchTests.swift  IntegrationTests.swift  MCPFileSearchTests.swift  QueryBuilderTests.swift  SearchFunctionalityTests.swift  SimpleTests.swift  SortingAndFilteringTests.swift  ToolTests.swift  TypeSystemTests.swift
Tests/MCPFileSearchTests/Support/: SharedMCP.swift
src/mcp_server_everything_search/: __init__.py  __main__.py  everything_sdk.py  platform_search.py  search_interface.py  server.py
test-files/: backup-2023-12-25.txt  log-january-2025.txt  test-2024-report.txt
test-files/code/: app.swift  server.js  utils.py
test-files/configs/: docker-compose.yml
test-files/data/: config.json  sample-data.json
test-files/documents/: project-notes.md  readme.txt
test-files/web/: index.html  styles.css
