[project]
name = "mcp-server-everything-search"
version = "0.3.0"
description = "A Model Context Protocol server providing fast file searching on macOS (mdfind) and Linux (locate/plocate)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mamerto Fabian", email = "aidrivencoder@gmail.com" },
]
keywords = ["search", "mcp", "llm", "spotlight", "locate"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-everything-search = "mcp_server_everything_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
